# skid

./: README.md  build.cmd  core.js  core_bundle.js  dev.js  init.cmd  log.txt  package-lock.json  package.json  script.txt
.github/workflows/: main.yaml  main.yml  test.yaml
mobile/: package.json
mobile/src-tauri/: Cargo.toml  tauri.conf.json
save/: arbinger.json  arbingertest.json  kiddie.json
src/: index.html  package-lock.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/js/: achievements.js  autoscript.js  battery.js  buy.js  console.js  core  core.js  options.js  package.json  player.js  prestige.js  save.js  script.js  server.js  tutorial.js
temp/: app.js
temp/public/: config.txt
temp/routes/: index.js
temp/views/: index.jade
~/.tauri/: myapp.key  myapp.key.pub
